--- a/index.html
+++ b/index.html
@@ -153,6 +153,17 @@
                 </div>
             </div>
             <div class="footer">
+                <div id="share">
+                    <h2>Share</h2>
+                    <p>
+                        Tweak or copy the link below; the button makes sure it stays URL-safe.
+                    </p>
+                    <div class="share-controls">
+                        <input id="share-url" type="text" />
+                        <button id="share-copy" type="button">Copy link</button>
+                    </div>
+                    <div id="share-status" aria-live="polite"></div>
+                </div>
                 <!-- Get in touch at
                 <a href="mailto:leah@vashevko.com">leah@vashevko.com</a>
                 <br /> -->
@@ -381,6 +392,7 @@
         <script src="utils.js"></script>
         <script src="main.js"></script>
         <script src="controls.js"></script>
+        <script src="share.js"></script>
         <script src="sortandpop.js"></script>
     </body>
 </html>
